# bevy_meetup_2025_bevy_hui

./: README.md
docs/: main.css
docs/css/: atom-one-dark.css
docs/slides/: 01_intro.md  02_problem.md  03_bevy_hui.md  04_simple.md  06_widgets.md  07_outro.md
example/: Cargo.toml  run.sh
example/assets/: coin.aseprite  hello.html  menu.html
example/assets/aseprite/: aseprite.html  menu.html
example/assets/button/: button.html
example/assets/button_reuse/: button.html  menu.html
example/assets/slider/: menu.html  slider.html
example/src/: aseprite.rs  button.rs  button_reuse.rs  common.rs  hello.rs  slider.rs
